--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,6 @@ theme: another
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:dyygtfx/blog.git
+  repository: https://github.com/dyygtfx/blog.git
   branch: gh-pages
   
